Handled function syntax with ()'s correctly; made 'Developer documentation' not wrap if browser window is narrow.

--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -46,7 +46,7 @@ div.header h1 { color: white; margin:0; font-weight: normal; }
 div.header h2 { color: white; margin-top: 0; margin-bottom 1em; font-weight: normal; font-style: italic; font-size: 100%; }
 table.navbar { background: #B0E020; margin: 0; padding: 0; border-bottom: 1px #384806 dotted; width: 100%; }
 table.navbar td { padding: 4px 0.5em 3px 0.5em; }
-table.navbar td.flexible { width: 100%; text-align: right; padding-right: 1em; }
+table.navbar td.flexible { width: 100%; text-align: right; padding-right: 1em; white-space: nowrap; }
 table.navbar td.selected { background: #384806; }
 table.navbar td.selected, table.navbar td.selected a { color: white; }
 table.navbar a:hover, table.navbar a:focus { background: inherit; border-bottom: 1px solid #303099; }
